--- a/dev-workflow-ui/webContent/view/task.xhtml
+++ b/dev-workflow-ui/webContent/view/task.xhtml
@@ -14,9 +14,11 @@
       <f:event type="preRenderView" listener="#{tasksDetailsIvyDevWfBean.redirectIfCantResume}" />
 
       <div class="layout-dashboard">
-      <div class="info-banner-wrapper">
-        <p:staticMessage severity="#{tasksDetailsIvyDevWfBean.getInfoBannerSeverity()}" detail="#{tasksDetailsIvyDevWfBean.getInfoBannerMessage()}" rendered="#{tasksDetailsIvyDevWfBean.showInfoBanner()}"></p:staticMessage>
-      </div>
+        <div class="info-banner-wrapper">
+          <p:staticMessage severity="#{tasksDetailsIvyDevWfBean.getInfoBannerSeverity()}"
+            detail="#{tasksDetailsIvyDevWfBean.getInfoBannerMessage()}"
+            rendered="#{tasksDetailsIvyDevWfBean.showInfoBanner()}"></p:staticMessage>
+        </div>
         <div class="grid">
           <div class="col-12">
             <div class="card">
@@ -51,39 +53,43 @@
                   <h6 class="m-0">Workflow Events</h6>
                 </div>
               </div>
-              <jc:workflowEventsTable id="workflowEvents" workflowEvents="#{tasksDetailsIvyDevWfBean.selectedTask.workflowEvents}"/>
+              <jc:workflowEventsTable id="workflowEvents"
+                workflowEvents="#{tasksDetailsIvyDevWfBean.selectedTask.workflowEvents}" />
             </div>
           </div>
         </div>
       </div>
 
-      <jc:processViewer id="processViewer" title="Process of: #{tasksDetailsIvyDevWfBean.selectedTask.name}" link="#{tasksDetailsIvyDevWfBean.viewerLink}" />
+      <jc:processViewer id="processViewer" title="Process of: #{tasksDetailsIvyDevWfBean.selectedTask.name}"
+        link="#{tasksDetailsIvyDevWfBean.viewerLink}" />
 
       <p:dialog header="Delegate task" id="delegateTaskDialog" widgetVar="delegateTaskModal" modal="true" width="400">
         <h:form id="delegateTaskForm">
-          <h:outputText value="Delegate the task to a specified user or group"/>
+          <h:outputText value="Delegate the task to a specified user or group" />
           <h:panelGroup id="delegateElements" layout="block" styleClass="ui-fluid">
-            <p:selectOneRadio value="#{tasksDetailsIvyDevWfBean.showUsers}" layout="responsive"
-              columns="2" styleClass="mt-2">
-              <f:selectItem itemLabel="User" itemValue="true"/>
-              <f:selectItem itemLabel="Role" itemValue="false"/>
-              <p:ajax update="delegateElements" event="valueChange"/>
+            <p:selectOneRadio value="#{tasksDetailsIvyDevWfBean.showUsers}" layout="responsive" columns="2"
+              styleClass="mt-2">
+              <f:selectItem itemLabel="User" itemValue="true" />
+              <f:selectItem itemLabel="Role" itemValue="false" />
+              <p:ajax update="delegateElements" event="valueChange" />
             </p:selectOneRadio>
             <p:selectOneMenu styleClass="mt-2" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
               rendered="#{tasksDetailsIvyDevWfBean.showUsers}" id="selectUserMenu" immediate="true">
-              <f:selectItems value="#{tasksDetailsIvyDevWfBean.allUsers}" var="member" itemLabel="#{member.displayName}" itemValue="#{member.memberName}"/>
+              <f:selectItems value="#{tasksDetailsIvyDevWfBean.allUsers}" var="member" itemLabel="#{member.displayName}"
+                itemValue="#{member.memberName}" />
             </p:selectOneMenu>
             <p:selectOneMenu styleClass="mt-2" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
               rendered="#{!tasksDetailsIvyDevWfBean.showUsers}" id="selectRoleMenu" immediate="true">
-              <f:selectItems value="#{tasksDetailsIvyDevWfBean.allRoles}" var="member" itemLabel="#{member.displayName}" itemValue="#{member.memberName}"/>
+              <f:selectItems value="#{tasksDetailsIvyDevWfBean.allRoles}" var="member" itemLabel="#{member.displayName}"
+                itemValue="#{member.memberName}" />
             </p:selectOneMenu>
           </h:panelGroup>
           <h:panelGroup layout="block" styleClass="mt-2 dialog-button-container">
             <p:commandButton id="delegateProceedButton" value="Assign task"
-              actionListener="#{tasksDetailsIvyDevWfBean.delegateTask}" icon="si si-move-to-bottom"
-              update="taskDetail" onsuccess="PF('delegateTaskModal').hide();"/>
+              actionListener="#{tasksDetailsIvyDevWfBean.delegateTask}" icon="si si-move-to-bottom" update="taskDetail"
+              onsuccess="PF('delegateTaskModal').hide();" />
             <p:commandButton value="Cancel" styleClass="ui-button-secondary ui-button-flat dialog-cancel-button"
-              onclick="PF('delegateTaskModal').hide();"/>
+              onclick="PF('delegateTaskModal').hide();" />
           </h:panelGroup>
         </h:form>
       </p:dialog>
