--- a/dev-workflow-ui/webContent/view/cases.xhtml
+++ b/dev-workflow-ui/webContent/view/cases.xhtml
@@ -8,7 +8,73 @@
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
       <h:form id="casesForm">
         <div class="card">
-          <ui:include src="/includes/components/casesTable.xhtml"/>
+          <p:dataTable id="cases" var="case" value="#{casesIvyDevWfBean.casesDataModel}" widgetVar="casesTable"
+            styleClass="ui-fluid" emptyMessage="No Cases found with given criteria" paginatorPosition="bottom" rows="10"
+            lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
+            <p:ajax event="rowSelect" listener="#{casesIvyDevWfBean.redirectToCaseRow}" />
+            <f:facet name="header">
+              <div class="flex justify-content-between mb-3 pretty-search">
+                <div class="flex align-items-center">
+                  <i class="pr-3 si si-task-list-approve card-title-icon" />
+                  <h2 class="m-0">Cases</h2>
+                </div>
+                <h:panelGroup id="showAllCasesSwitch_container" styleClass="ml-auto inline-flex align-items-center"
+                  layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
+                  <h:outputText value="Show all" styleClass="mr-2" />
+                  <p:toggleSwitch id="showAllCasesSwitch" value="#{casesIvyDevWfBean.casesDataModel.showAll}"
+                    disabled="#{!adminIvyDevWfBean.isWorkflowAdmin()}">
+                    <p:ajax update="cases" />
+                  </p:toggleSwitch>
+                </h:panelGroup>
+                <p:tooltip for="showAllCasesSwitch_container" position="top"
+                  value="If enabled shows all cases, even the ones the user is not involved in" />
+                <div class="ui-input-icon-left filter-container ml-3">
+                  <i class="pi pi-search" />
+                  <p:inputText id="globalFilter" value="#{casesIvyDevWfBean.casesDataModel.filter}"
+                    onkeyup="PF('casesTable').filter()" placeholder="Search" />
+                </div>
+              </div>
+            </f:facet>
+
+            <p:column styleClass="icon-row" responsivePriority="2" width="0">
+              <h:outputText id="caseIcon" styleClass="si si-lg si-task-list-approve" />
+              <p:tooltip for="caseIcon" value="Case: #{case.uuid()}" position="top" />
+            </p:column>
+
+            <p:column filterBy="#{case.state}" styleClass="icon-row" sortBy="#{case.state}">
+              <h:outputText id="caseState"
+                styleClass="si si-lg si-#{casesIvyDevWfBean.getStateIcon(case.businessState)}" />
+              <p:tooltip for="caseState" value="State: #{case.businessState} (#{case.state})" position="top" />
+            </p:column>
+
+            <p:column headerText="Name" filterBy="#{case.getName(case)}" sortBy="#{case.name}" responsivePriority="1">
+              <h:link outcome="case">
+                <f:param name="id" value="#{case.uuid()}" />
+                <h:outputText id="caseName" value="#{casesIvyDevWfBean.getName(case)}" />
+              </h:link>
+            </p:column>
+
+            <p:column headerText="Creator" filterBy="#{case.creatorUserName}" sortBy="#{case.creatorUserName}"
+              responsivePriority="3" width="160">
+              <jc:user user="#{case.creatorUser}" />
+            </p:column>
+
+            <p:column headerText="Start" style="text-align: center;" sortBy="#{case.startTimestamp}"
+              sortOrder="descending" responsivePriority="3" width="90">
+              <jc:time id="startTime" datetime="#{case.startTimestamp}" />
+            </p:column>
+
+            <p:column headerText="End" style="text-align: center;" sortBy="#{case.endTimestamp}" responsivePriority="4"
+              width="90">
+              <jc:time id="endTime" datetime="#{case.endTimestamp}" />
+            </p:column>
+
+            <p:column styleClass="table-btn-1" width="10">
+              <p:link href="case.xhtml?id=#{case.uuid()}">
+                <i class="si si-information-circle detail-btn" />
+              </p:link>
+            </p:column>
+          </p:dataTable>
         </div>
       </h:form>
     </ui:define>
