--- a/dev-workflow-ui/webContent/view/tasks.xhtml
+++ b/dev-workflow-ui/webContent/view/tasks.xhtml
@@ -8,7 +8,76 @@
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
       <h:form id="tasksForm">
         <div class="card">
-          <ui:include src="/includes/components/tasksTable.xhtml"/>
+          <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable"
+            styleClass="ui-fluid" emptyMessage="No Tasks found with given criteria" paginatorPosition="bottom" rows="10"
+            lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
+            <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" />
+            <f:facet name="header">
+              <div class="flex justify-content-between mb-3 pretty-search">
+                <div class="flex align-items-center">
+                  <i class="pr-3 si si-layout-bullets card-title-icon" />
+                  <h2 class="m-0">Tasks</h2>
+                </div>
+                <h:panelGroup id="showAllTasksSwitch_container" styleClass="ml-auto inline-flex align-items-center"
+                  layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
+                  <h:outputText value="Show all" styleClass="mr-2" />
+                  <p:toggleSwitch id="showAllTasksSwitch" value="#{tasksIvyDevWfBean.tasksDataModel.showAll}"
+                    disabled="#{!adminIvyDevWfBean.isWorkflowAdmin()}">
+                    <p:ajax update="tasksForm" />
+                  </p:toggleSwitch>
+                </h:panelGroup>
+                <p:tooltip for="showAllTasksSwitch_container" position="top"
+                  value="If enabled shows all tasks, even the ones the user is not involved in" />
+                <div class="ui-input-icon-left filter-container ml-3">
+                  <i class="pi pi-search" />
+                  <p:inputText id="globalFilter" placeholder="Search" value="#{tasksIvyDevWfBean.tasksDataModel.filter}"
+                    onkeyup="PF('tasksTable').filter()" />
+                </div>
+              </div>
+            </f:facet>
+
+            <p:column styleClass="icon-row" responsivePriority="4" width="0">
+              <h:outputText id="taskIcon" class="si si-lg si-task-list-edit" />
+              <p:tooltip for="taskIcon" value="Task: #{task.uuid}" position="top" />
+            </p:column>
+
+            <p:column filterBy="#{task.state}" styleClass="icon-row" sortBy="#{task.state}">
+              <h:outputText id="taskState" styleClass="si si-lg si-#{task.stateIcon}" />
+              <p:tooltip for="taskState" value="State: #{task.businessState} (#{task.state})" position="top" />
+            </p:column>
+
+            <p:column id="priority" filterBy="#{task.priority}" styleClass="icon-row" sortBy="#{task.priority}">
+              <h:outputText id="taskPrio" styleClass="si si-lg si-#{task.priorityIcon}" />
+              <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
+            </p:column>
+
+            <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}" responsivePriority="1">
+              <h:commandLink action="#{tasksIvyDevWfBean.redirectToTaskDetails(task)}">
+                <h:outputText id="taskName" value="#{task.name}" />
+              </h:commandLink>
+            </p:column>
+
+            <p:column headerText="Responsible" filterBy="#{task.activator}" sortBy="#{task.activatorName}" width="160"
+              responsivePriority="3">
+              <jc:user user="#{task.activator}" />
+            </p:column>
+
+            <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}"
+              sortOrder="descending" responsivePriority="3" width="100">
+              <jc:time id="startTime" datetime="#{task.startTimestamp}" />
+            </p:column>
+
+            <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" responsivePriority="4"
+              width="100">
+              <jc:time id="endTime" datetime="#{task.endTimestamp}" />
+            </p:column>
+
+            <p:column styleClass="table-btn-1" responsivePriority="2" width="10">
+              <p:link href="#{task.detailUrl}">
+                <i class="si si-information-circle detail-btn" />
+              </p:link>
+            </p:column>
+          </p:dataTable>
         </div>
       </h:form>
     </ui:define>
