--- a/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -9,11 +9,6 @@
     paginatorPosition="bottom" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
     <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" update="@form" />
 
-    <p:column styleClass="icon-row" responsivePriority="4" width="10">
-      <h:outputText id="taskIcon" class="si si-lg si-task-list-edit" />
-      <p:tooltip for="taskIcon" value="Task: #{task.uuid}" position="top" />
-    </p:column>
-
     <p:column filterBy="#{task.state}" styleClass="icon-row" width="10">
       <h:outputText id="taskState" styleClass="si si-lg si-#{task.stateIcon}" />
       <p:tooltip for="taskState" value="State: #{task.businessState} (#{task.state})" position="top" />
@@ -21,7 +16,7 @@
 
     <p:column id="priority" filterBy="#{task.priority}" styleClass="icon-row"
       width="10" responsivePriority="3">
-      <h:outputText id="taskPrio" styleClass="si si-lg si-#{task.priorityIcon}" />
+      <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
       <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
     </p:column>
 
