--- a/dev-workflow-ui/webContent/view/cleanup.xhtml
+++ b/dev-workflow-ui/webContent/view/cleanup.xhtml
@@ -8,13 +8,10 @@
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
 
       <div class="card">
-        <div class="flex align-items-center mb-3">
-          <i class="pr-3 si si-recycling-trash-bin-2 card-title-icon"></i>
-          <h2 class="m-0">Cleanup</h2>
-        </div>
+        <h4 class="m-0">Cleanup</h4>
         <h:form id="clanupForm">
           <p:growl id="growl" showDetail="true" />
-          <p>When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to reset your designer.</p>
+          <p>When you click through different processes you create different types of data like cases, tasks etc. Here you can clean that data to reset your designer.</p>
           <p:panelGrid columns="1" layout="flex">
             <p:selectBooleanCheckbox id="casesAndTasksCheckbox" value="#{cleanupIvyDevWfBean.casesTasksAndDependent}" itemLabel="All Cases, Tasks and dependent objects" />
             <p:selectBooleanCheckbox id="businessDataCheckbox" value="#{cleanupIvyDevWfBean.businessDataAndSearchIndex}" itemLabel="All Business Data and the search index" />
