--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -21,48 +21,40 @@
 
       <div class="layout-dashboard">
         <h:panelGroup styleClass="grid" layout="block" rendered="#{loginIvyDevWfBean.loggedIn}">
-          <div class="col-12 lg:col-4">
-            <div class="card last-starts-card">
+          <div class="col-12 lg:col-5">
+            <div class="card startedProcessesCard">
               <div class="card-header">
-                <div class="card-title flex align-items-center">
-                  <i class="pr-3 si si-navigation-menu"></i>
-                  <h6 class="m-0">Started processes</h6>
-                </div>
+                <h4 class="m-0">Started Processes</h4>
               </div>
-              <p:dataTable id="lastStarts" var="start" value="#{homepageIvyDevWfBean.lastStarts}" selectionMode="single"
+              <p:dataTable id="startedProcesses" var="start" value="#{homepageIvyDevWfBean.lastStarts}" selectionMode="single"
                 rowKey="#{start.displayName}" rows="10" styleClass="table-header-none"
                 rendered="#{not empty homepageIvyDevWfBean.lastStarts}">
                 <p:ajax event="rowSelect" listener="#{homepageIvyDevWfBean.executeLastStart}" />
-                <p:column styleClass="last-start-element">
-                  <div class="flex justify-content-between">
-                    <p:commandLink id="last-start-link" actionListener="#{start.execute}"
-                      styleClass="hidden-text-ellipsis flex">
-                      <i class="#{start.icon} mr-1" />
+                <p:column styleClass="startedProcessElement">
+                  <div class="flex justify-content-between align-items-center">
+                    <p:commandLink id="startedProcessLink" actionListener="#{start.execute}"
+                      styleClass="flex align-items-center">
+                      <i class="#{start.icon} mr-3" />
                       <h:outputText value="#{start.displayName}" />
                     </p:commandLink>
-                    <p:tooltip for="last-start-link" value="#{start.displayName}" position="top" />
+                    <p:tooltip for="startedProcessLink" value="#{start.displayName}" position="top" />
 
                     <div class="flex">
-                      <p:link id="copyStartLinkBtn" href="#" onclick="copyToClipboard('#{start.link}')">
-                        <i class="si si-hyperlink-3" />
-                      </p:link>
-                      <p:tooltip for="copyStartLinkBtn" value="Copy to clipboard" position="top" />
-
-                      <p:link id="openStartFullscreenBtn" href="#{start.link}" styleClass="ml-1"
-                        rendered="#{start.embedInFrame}">
-                        <i class="si si-expand-6" />
-                      </p:link>
-                      <p:tooltip for="openStartFullscreenBtn" value="Open start on a fullscreen page" position="top"
-                        rendered="#{start.embedInFrame}" />
-
-                      <p:commandLink id="openProcessViewer" oncomplete="PF('process-viewer-dlg').show()"
-                        styleClass="ml-1" update="processViewer:processViewerDialog"
-                        actionListener="#{homepageIvyDevWfBean.setViewerStart(start.viewerLink)}"
-                        rendered="#{start.viewerAllowed}">
-                        <i class="si si-hierarchy-6 si-rotate-270" />
+                      <p:commandLink id="startedProcessMenuLink">
+                        <i class="si si-navigation-menu-horizontal" />
                       </p:commandLink>
-                      <p:tooltip for="openProcessViewer" position="top"
-                        value="#{start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map Viewer'}" />
+                      <p:menu id="startsActionsMenu" overlay="true" trigger="startedProcessMenuLink" my="right top"
+                        at="right bottom" style="width: 200px">
+                        <p:menuitem value="Copy to clipboard" onclick="copyToClipboard('#{start.link}')"
+                          id="copyStartLinkBtn" icon="si si-hyperlink-3" />
+                        <p:menuitem value="Open fullscreen" url="#{start.link}" id="openStartFullscreenBtn"
+                          rendered="#{start.embedInFrame}" icon="si si-expand-6" />
+                        <p:menuitem id="openProcessViewer"
+                          value="#{start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map Viewer'}"
+                          oncomplete="PF('process-viewer-dlg').show()" update="processViewer:processViewerDialog"
+                          actionListener="#{homepageIvyDevWfBean.setViewerStart(start.viewerLink)}"
+                          rendered="#{start.viewerAllowed}" icon="si si-hierarchy-6 si-rotate-270" />
+                      </p:menu>
                     </div>
                   </div>
                 </p:column>
@@ -74,37 +66,31 @@
             </div>
           </div>
 
-          <div class="col-12 lg:col-8">
+          <div class="col-12 lg:col-7">
             <div class="card active-tasks-card">
               <div class="card-header">
-                <div class="card-title flex align-items-center">
-                  <i class="pr-3 si si-layout-bullets"></i>
-                  <h6 class="m-0">Open tasks</h6>
-                </div>
+                <h4 class="m-0">Open Tasks</h4>
               </div>
               <p:dataTable id="activeTasks" var="task" value="#{personalTasksIvyDevWfBean.tasksDataModel}" lazy="true"
                 rows="6" paginator="true" paginatorAlwaysVisible="false"
                 rendered="#{homepageIvyDevWfBean.tasksSize gt 0}" paginatorPosition="bottom" selectionMode="single">
                 <p:ajax event="rowSelect" listener="#{personalTasksIvyDevWfBean.executeTaskRow}" />
-                <p:column styleClass="icon-row" responsivePriority="4" width="0">
-                  <h:outputText id="taskIcon" class="si si-lg si-task-list-edit" />
-                  <p:tooltip for="taskIcon" value="Task: #{task.uuid}" position="top" />
-                </p:column>
-                <p:column styleClass="icon-row" sortBy="#{task.priority}" width="10">
-                  <h:outputText id="taskPrio" styleClass="si si-lg si-#{task.priorityIcon}" />
+                <p:column headerText="Prio" styleClass="icon-row" sortBy="#{task.priority}" width="30">
+                  <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
                   <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
                 </p:column>
                 <p:column headerText="Name" sortBy="#{task.name}" responsivePriority="1" width="140">
-                  <p:commandLink id="startTaskLink" actionListener="#{personalTasksIvyDevWfBean.executeTask(task)}">
+                  <p:commandLink id="startTaskLink" actionListener="#{personalTasksIvyDevWfBean.executeTask(task)}"
+                    styleClass="white-space-nowrap">
                     <h:outputText id="taskName" value="#{task.name}" />
+                    <p:tooltip for="taskName" value="#{task.name}" position="top" />
                   </p:commandLink>
                 </p:column>
-                <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}"
-                  responsivePriority="3" sortOrder="descending" width="80">
+                <p:column headerText="Start" sortBy="#{task.startTimestamp}" responsivePriority="3"
+                  sortOrder="descending" width="80">
                   <jc:time id="startTime" datetime="#{task.startTimestamp}" />
                 </p:column>
-                <p:column headerText="Expiry" style="text-align: center;" sortBy="#{task.expiryTimestamp}"
-                  responsivePriority="2" width="80">
+                <p:column headerText="Expiry" sortBy="#{task.expiryTimestamp}" responsivePriority="2" width="80">
                   <jc:time id="expiryTime" datetime="#{task.expiryTimestamp}" />
                 </p:column>
                 <p:column styleClass="table-btn-1" width="5">
@@ -123,21 +109,12 @@
           <div class="col-12">
             <div class="card starts-card">
               <div class="card-header">
-                <div class="card-title flex align-items-center">
-                  <i class="pr-3 si si-task-list-approve card-title-icon"></i>
-                  <h6 class="m-0">Started cases</h6>
-                </div>
+                <h4 class="m-0">Started Cases</h4>
               </div>
               <p:dataTable id="startedCases" var="case" value="#{homepageIvyDevWfBean.startedCasesDataModel}"
-                widgetVar="casesTable" styleClass="ui-fluid" emptyMessage="No Cases found with given criteria"
-                paginatorPosition="bottom" rows="6" lazy="true" paginator="true" paginatorAlwaysVisible="false"
-                selectionMode="single">
+                widgetVar="casesTable" emptyMessage="No Cases found with given criteria" paginatorPosition="bottom"
+                rows="6" lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
                 <p:ajax event="rowSelect" listener="#{casesIvyDevWfBean.redirectToCaseRow}" />
-
-                <p:column styleClass="icon-row" responsivePriority="2" width="0">
-                  <h:outputText id="caseIcon" styleClass="si si-lg si-task-list-approve" />
-                  <p:tooltip for="caseIcon" value="Case: #{case.uuid()}" position="top" />
-                </p:column>
 
                 <p:column filterBy="#{case.state}" styleClass="icon-row" sortBy="#{case.state}">
                   <h:outputText id="caseState" styleClass="si si-#{casesIvyDevWfBean.getStateIcon(case.businessState)}"
@@ -152,22 +129,24 @@
                   </h:link>
                 </p:column>
 
-                <p:column headerText="Start" style="text-align: center;" sortBy="#{case.startTimestamp}"
-                  responsivePriority="2" sortOrder="descending" width="100">
+                <p:column headerText="Start" sortBy="#{case.startTimestamp}" responsivePriority="2"
+                  sortOrder="descending" width="100">
                   <jc:time id="startTime" datetime="#{case.startTimestamp}" />
                 </p:column>
 
-                <p:column headerText="End" style="text-align: center;" sortBy="#{case.endTimestamp}"
-                  responsivePriority="3" width="100">
+                <p:column headerText="End" sortBy="#{case.endTimestamp}" responsivePriority="3" width="100">
                   <jc:time id="endTime" datetime="#{case.endTimestamp}" />
                 </p:column>
 
-                <p:column width="40">
+                <p:column width="10">
                   <p:commandLink id="rerunCaseIcon" actionListener="#{homepageIvyDevWfBean.rerunProcess(case)}"
                     styleClass="text-color mr-2">
                     <i class="si si-button-refresh-arrow text-2xl" />
                     <p:tooltip for="rerunCaseIcon" value="Run again" position="top" />
                   </p:commandLink>
+                </p:column>
+
+                <p:column width="10">
                   <p:link id="caseDetailsIcon" href="case.xhtml?id=#{case.uuid()}">
                     <i class="si si-information-circle detail-btn" />
                     <p:tooltip for="caseDetailsIcon" value="Open case details" position="top" />
