--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -6,18 +6,7 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <f:event type="preRenderView" listener="#{homepageIvyDevWfBean.redirectIfNoTasksOrLastStarts}" />
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
-
-      <h:panelGroup layout="block" rendered="#{!loginIvyDevWfBean.loggedIn}"
-        styleClass="ui-message ui-staticmessage ui-message-warn">
-        <span class="ui-message-warn-icon"></span>
-        <span class="ui-message-warn-summary">Warning</span>
-        <span class="ui-message-warn-detail">Please <a
-          href="#{engineModeIvyDevWfBean.demoOrDesigner ? 'loginTable' : 'login'}.xhtml"> log in</a> to enable all
-          features.
-        </span>
-      </h:panelGroup>
 
       <div class="layout-dashboard">
         <h:panelGroup styleClass="grid" layout="block" rendered="#{loginIvyDevWfBean.loggedIn}">
@@ -73,7 +62,7 @@
               </div>
               <p:dataTable id="activeTasks" var="task" value="#{personalTasksIvyDevWfBean.tasksDataModel}" lazy="true"
                 rows="6" paginator="true" paginatorAlwaysVisible="false"
-                rendered="#{homepageIvyDevWfBean.tasksSize gt 0}" paginatorPosition="bottom" selectionMode="single">
+                rendered="#{personalTasksIvyDevWfBean.tasksDataModel.size gt 0}" paginatorPosition="bottom" selectionMode="single">
                 <p:ajax event="rowSelect" listener="#{personalTasksIvyDevWfBean.executeTaskRow}" />
                 <p:column headerText="Prio" styleClass="icon-row" sortBy="#{task.priority}" width="30">
                   <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
@@ -100,7 +89,7 @@
                   </p:link>
                 </p:column>
               </p:dataTable>
-              <h:panelGrid rendered="#{homepageIvyDevWfBean.tasksSize eq 0}">
+              <h:panelGrid rendered="#{personalTasksIvyDevWfBean.tasksDataModel.size eq 0}">
                 <h:outputText value="You don't have any active tasks. Go take a coffee break 😊☕" />
               </h:panelGrid>
             </div>
